@@ -1,1 +1,5 @@
 # java-features
+
+```
+java --enable-preview --add-modules jdk.incubator.concurrent -cp target\classes by.konanaw.features.preview.java19.Main
+```
